objects/SBQQ__QuoteLineGroup__c.object
<CustomObject>
    <customHelpPage>SBQQ__QuoteLineGroupHelp</customHelpPage>
    <description>Group of line items on a quote.</description>
    <fields>
        <fullName>SBQQ__AdditionalDiscountRate__c</fullName>
        <description>Default additional discount rate applied to line items in this group.</description>
        <inlineHelpText>Default additional discount rate applied to line items in this group. You&apos;ll be able to override this value on line item level.</inlineHelpText>
        <label>Additional  Disc. (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerTotal__c</fullName>
        <description>Total for this group&apos;s line items before any partner discounts.</description>
        <inlineHelpText>Total for this group&apos;s line items before any partner discounts applied.</inlineHelpText>
        <label>Customer Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Description__c</fullName>
        <description>Description for this group.</description>
        <inlineHelpText>Description for this group.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SBQQ__EndDate__c</fullName>
        <description>End date for subscriptions in this group.</description>
        <inlineHelpText>End date for subscriptions in this group.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__ListTotal__c</fullName>
        <description>Total for this group&apos;s line items before any discounts are applied.</description>
        <inlineHelpText>Total for this group&apos;s line items before any discounts are applied.</inlineHelpText>
        <label>List Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__MarkupRate__c</fullName>
        <description>Default markup rate applied to line items in this group.</description>
        <inlineHelpText>Default markup rate applied to line items in this group. You&apos;ll be able to override this on line item level.</inlineHelpText>
        <label>Markup (%)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__NetTotal__c</fullName>
        <description>Total for this group&apos;s line items after all discounts are applied.</description>
        <inlineHelpText>Total for this group&apos;s line items after all discounts are applied.</inlineHelpText>
        <label>Net Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Number__c</fullName>
        <description>Sort order of this group within its quote.</description>
        <inlineHelpText>Sort order of this group within its quote.</inlineHelpText>
        <label>Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the entire group as optional.</description>
        <inlineHelpText>Marks the entire group as optional.</inlineHelpText>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote process for use with this group.</description>
        <inlineHelpText>Quote process for use with this group. Overrides quote level field.</inlineHelpText>
        <label>Quote Process</label>
        <referenceTo>SBQQ__QuoteProcess__c</referenceTo>
        <relationshipLabel>Quote Line Groups</relationshipLabel>
        <relationshipName>QuoteLineGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <description>Quote to which this group belongs.</description>
        <inlineHelpText>Quote to which this group belongs.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Quote Line Groups</relationshipLabel>
        <relationshipName>LineItemGroups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__SeparateContract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that forces a separate contract for this group.</description>
        <inlineHelpText>Check to always generate a separate contract for subscriptions in this group.</inlineHelpText>
        <label>Separate Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__SolutionGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Solution group from which this quote group was generated (if any).</description>
        <inlineHelpText>Solution group from which this quote group was generated (if any).</inlineHelpText>
        <label>Solution Group</label>
        <referenceTo>SBQQ__SolutionGroup__c</referenceTo>
        <relationshipLabel>Quote Line Groups</relationshipLabel>
        <relationshipName>QuoteLineGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source of cloned quote line group.</description>
        <inlineHelpText>Source of cloned quote line group.</inlineHelpText>
        <label>Source</label>
        <referenceTo>SBQQ__QuoteLineGroup__c</referenceTo>
        <relationshipLabel>Quote Line Groups</relationshipLabel>
        <relationshipName>Clones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__StartDate__c</fullName>
        <description>Start date for subscriptions in this group.</description>
        <inlineHelpText>Start date for subscriptions in this group.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionTerm__c</fullName>
        <description>Subscription term used to prorate eligible products in this group.</description>
        <inlineHelpText>Subscription term used to prorate eligible products in this group.</inlineHelpText>
        <label>Subscription Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quote Line Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Line Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>